--- a/config/conf.d/11-apache-log.conf
+++ b/config/conf.d/11-apache-log.conf
@@ -2,8 +2,11 @@ filter {
 
   if [type] == "apache-access" {
     grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
-      remove_tag => [ "beats_input_codec_plain_applied" ]
+      match => { "message" => [ 
+        "%{COMBINEDAPACHELOG}",
+        "%{IP:clientip} %{USER:ident} %{USER:auth} \[%{HTTPDATE:apache_timestamp}\] \"%{WORD:method} /%{NOTSPACE:request_page} HTTP/%{NUMBER:http_version}\" %{NUMBER:server_response} "
+        ]
+      }
     }
     geoip {
       source => "clientip"
@@ -22,6 +25,7 @@ filter {
       replace => [ "@source_host", "%{host}" ]
       replace => [ "@message", "%{message}" ]
       rename => [ "verb" , "method" ]
+      remove_tag => [ "beats_input_codec_plain_applied" ]
     } 
     date {
       match => [ "timestamp" , "dd/MMM/YYYY:HH:mm:ss Z" ]
