--- a/config/conf.d/02-beats-input.conf
+++ b/config/conf.d/02-beats-input.conf
@@ -1,5 +1,6 @@
 input {
   beats {
+    congestion_threshold => 10
     port => 5044
     ssl => true
     ssl_certificate => "/etc/pki/tls/certs/logstash-forwarder.crt"
